home-page.css
body, html {
    margin: 0;
    padding: 0;
    font-family: Arial, sans-serif;
    height: 100%;
    width: 100%;
    background-color: black;
}
.container {
    display: flex;
    flex-direction: row;
    width: 100%;
    height: 100%;
}
.column {
    border: 2px solid black;
    height: 100%;
    width: 33.33%;
    background-size: cover;
    background-position: center;
    position: relative;
    cursor: pointer;
}
.column-title {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: white;
    font-size: 24px;
    font-weight: bold;
    text-align: center;
    text-shadow: 2px 2px 4px black;
    transition: display 0.5s;
    font-family: 'Rufina', serif;

}
.overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    display: none;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    transition: display 0.5s;
    font-family: 'Sintony', sans-serif;
}
.overlay p {
color: white;
font-size: 16px;
line-height: 1.5;
margin-bottom: 10px; /* decreased margin bottom */
padding: 0 20px;
text-align: center;
font-family: 'Sintony', sans-serif; 
       }

.overlay button {
padding: 10px 20px;
background-color: white;
color: black;
border: none;
font-size: 16px;
cursor: pointer;
transition: all 0.3s ease;
display: block; /* added display block */
margin-top: 10px; /* added margin top */
border-radius: 20px;
text-transform: uppercase;
}


.overlay button:hover {
    background-color: black;
    color: white;
}

.column1 {
    background-image: url('images/church.jpg');
}
.column2 {
    background-image: url('images/Berry Hotel in Color.jpg');
}
.column3 {
    background-image: url('images/courthouse.jpg');
}


.button2 {
    position: fixed;
    padding: 10px;
    border-radius: 10px;
    color: white;
    font-weight: bold;
    text-align: center;
    cursor: pointer;
    transition: opacity 0.3s;
    opacity: 0.5;
    z-index: 2;
    font-family: 'Sintony', sans-serif;

}
.back-button {
    top: 10px;
    left: 10px;
    background-color: rgba(0, 0, 0, 0.5);
    text-transform: uppercase;
    
}

.opaque {
    opacity: 1;
}
.transparent {
    opacity: 0.5;
}






@media only screen and (max-width: 768px) {
    .container {
        display: flex;
        flex-direction: column;
    }

    .column {
        border: 2px solid black;
        min-width: 100%;
        min-height: 75%;
        width: auto;
        height: auto;
    }
    
}

